...
  String? errorMessage;

  @override
  Widget build(BuildContext context) {
    //------------------------------ email field------------------------------
    final emailField = TextFormField(
        key: Key('emailField_login'),
        autofocus: false,
        controller: emailController,
        keyboardType: TextInputType.emailAddress,
        // Email Validation
        validator: (value) {
          if (value!.isEmpty) {
...
            borderRadius: BorderRadius.circular(10),
          ),
        ));

    //------------------------------ password field------------------------------
    final passwordField = TextFormField(
        key: Key('passwordField_login'),
        autofocus: false,
        controller: passwordController,
        obscureText: true,
        validator: (value) {
          RegExp regex = new RegExp(r'^.{6,}$');
          if (value!.isEmpty) {
...
          border: OutlineInputBorder(
            borderRadius: BorderRadius.circular(10),
          ),
        ));
    //------------------------------ Login Button ------------------------------
    final loginButton = Material(
      key: Key('signInButton'),
      elevation: 5,
      borderRadius: BorderRadius.circular(30),
      color: Color.fromARGB(255, 108, 82, 255),
      child: MaterialButton(
          padding: EdgeInsets.fromLTRB(20, 15, 20, 15),
          minWidth: MediaQuery.of(context).size.width,
...
