...

//------------------------------------Logout------------------------------------

              Container(
                padding: EdgeInsets.only(top: 80, left: 300),
                child: TextButton(
                  key: Key('logoutButton'),
                  onPressed: () {
                    logout(context);
                  },
                  child: Text('Logout',
                      style: TextStyle(
                        fontSize: 15,
...
                                return ListView(
                                  children: snapshot.data!.docs
                                      .map((DocumentSnapshot document) {
                                    Map<String, dynamic> data = document.data()!
                                        as Map<String, dynamic>;
                                    return Container(
                                      key: Key('openReport_emergencyCasesPage'),
                                      margin: EdgeInsets.only(
                                          top: 5, left: 30, right: 30),
                                      decoration: BoxDecoration(
                                        color: Color(0xFF6666FF),
                                        borderRadius: BorderRadius.circular(10),
                                        boxShadow: [
...
